# last-light

./: Cargo.toml  roadmap.md
crates/game/: Cargo.toml
crates/game/src/: adventure.rs  gathering.rs  inventory.rs  lib.rs  quest.rs  refining.rs  save.rs  tavern.rs  time.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: main.rs  menu.rs  tavern.rs  ui.rs
crates/terminal/src/tavern/: crafting_view.rs  inventory_view.rs  left.rs  refining_view.rs  right.rs  state.rs  tavern_view.rs  tile_graphics.rs
crates/terminal/src/tavern/adventure_view/: combat.rs  in_adventure.rs  mod.rs  party_setup.rs  quest_board.rs  results.rs  roster.rs
crates/terminal/src/tavern/gathering_view/: grounds.rs  location.rs  mod.rs  panels.rs
crates/terminal/src/tavern/input/: adventure.rs  combat.rs  crafting.rs  gathering.rs  gear.rs  in_adventure.rs  inventory.rs  mod.rs  party_setup.rs  quest_board.rs  refining.rs  results.rs  roster.rs
src/: game.rs  halfblock.rs  main.rs  menu.rs  tavern.rs  ui.rs
src/game/: adventure.rs  adventurer.rs  crafting.rs  dungeon.rs  item.rs  quest.rs
src/tavern/: adventure_view.rs  gathering_view.rs  input.rs  right.rs  state.rs  tile_graphics.rs  util.rs
