[package]
name = "last-light-game"
version = "0.1.0"
edition = "2024"
description = "The Last Light game engine — shared between terminal and mobile frontends"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
